mostly removing jole and setting up screens

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -168,24 +168,24 @@ bindsym $mod+Shift+p exec pkill -USR1 '^redshift$'
 # open specific applications in specific workspaces
 assign [class="^Alacritty$"] → $ws1
 assign [class="^firefox$"] → $ws2
-assign [class="^obsidian$"] → $ws3
-assign [class="^Spotify$"] → $ws10
+assign [class="^thunderbird$"] → $ws3
+assign [class="^KeePassXC$"] → $ws10
 
 # assign workspaces to specific screens
-workspace $ws1 output DP-2
-workspace $ws3 output DP-2
-workspace $ws4 output DP-2
-workspace $ws5 output DP-2
-workspace $ws2 output DP-0
-workspace $ws10 output DP-0
+workspace $ws1 output DP-4
+workspace $ws3 output DP-4
+workspace $ws4 output DP-4
+workspace $ws5 output DP-4
+workspace $ws2 output DP-2
+workspace $ws10 output DP-2
 
 # autostart
 exec --no-startup-id dunst
 exec --no-startup-id redshift-gtk
 exec --no-startup-id alacritty
-exec --no-startup-id obsidian
+exec --no-startup-id thunderbird
 exec --no-startup-id firefox
-exec --no-startup-id spotify-launcher
+exec --no-startup-id keepassxc
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
