--- a/.ssh/config
+++ b/.ssh/config
@@ -1,21 +1,7 @@
-# Public
-Host jole
-    User jole
-    HostName jole.dev
-Host reditus
-    User root
-    HostName mom.reditus.de
-
-# Home
 Host pi
-    User pi
-    HostName 192.168.178.3
+  HostName 192.168.178.30
+  User laurin
+Host reditus
+  HostName mom.reditus.de
+  User root
 
-# 5G-FORAN
-Host ansible-master
-    User foran
-    HostName 10.0.0.60
-    # HostName ansible.foran.lab
-Host foran-dashboard
-    User foran
-    HostName dashboard.foran.lab
