--- a/.config/i3/config
+++ b/.config/i3/config
@@ -160,16 +160,13 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+# switch to urgent window
+bindsym $mod+x [urgent=latest] focus
+
 # bindings to programs
 bindsym $mod+e exec thunar
 bindsym $mod+w exec firefox
 bindsym $mod+Shift+p exec pkill -USR1 '^redshift$'
-
-# open specific applications in specific workspaces
-assign [class="^Alacritty$"] → $ws1
-assign [class="^firefox$"] → $ws2
-assign [class="^thunderbird$"] → $ws3
-assign [class="^KeePassXC$"] → $ws10
 
 # assign workspaces to specific screens
 workspace $ws1 output DP-4
@@ -179,12 +176,18 @@ workspace $ws5 output DP-4
 workspace $ws2 output DP-2
 workspace $ws10 output DP-2
 
+# load layouts
+exec --no-startup-id i3-msg 'workspace 1; append_layout ~/.config/i3/layout/1.json'
+exec --no-startup-id i3-msg 'workspace 2; append_layout ~/.config/i3/layout/2.json'
+exec --no-startup-id i3-msg 'workspace 3; append_layout ~/.config/i3/layout/3.json'
+exec --no-startup-id i3-msg 'workspace 10; append_layout ~/.config/i3/layout/10.json'
+
 # autostart
 exec --no-startup-id dunst
 exec --no-startup-id redshift-gtk
 exec --no-startup-id alacritty
-exec --no-startup-id thunderbird
 exec --no-startup-id firefox
+exec --no-startup-id thunderbird
 exec --no-startup-id keepassxc
 
 # reload the configuration file
