--- a/.ssh/config
+++ b/.ssh/config
@@ -1,7 +1,13 @@
 Host pi
-  HostName 192.168.178.30
-  User laurin
+    HostName 192.168.178.30
+    User laurin
 Host reditus
-  HostName mom.reditus.de
-  User root
+    HostName mom.reditus.de
+    User root
 
+Host kerkloh
+    HostName pve.kerk-loh.de
+    User root
+Host strom
+    HostName stromzaehler.kerk-loh.de
+    User root
