--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,7 @@
 Host pi
     HostName 192.168.178.30
-    User laurin
+    User pi
+
 Host reditus
     HostName mom.reditus.de
     User root
@@ -8,6 +9,7 @@ Host reditus
 Host kerkloh
     HostName pve.kerk-loh.de
     User root
+
 Host strom
     HostName stromzaehler.kerk-loh.de
     User root
