--- a/.config/i3/config
+++ b/.config/i3/config
@@ -193,6 +193,7 @@ exec --no-startup-id i3-msg 'workspace 10; append_layout ~/.config/i3/layout/10.
 exec --no-startup-id i3-msg 'workspace 2; append_layout ~/.config/i3/layout/2.json'
 
 # autostart
+exec --no-startup-id thunar --daemon
 exec --no-startup-id $HOME/.config/i3/scripts/wallpaper.sh
 exec --no-startup-id dunst
 exec --no-startup-id redshift-gtk
