--- a/shared/.config/hypr/hyprland.conf
+++ b/shared/.config/hypr/hyprland.conf
@@ -222,7 +222,7 @@ bind = $mainMod, O, exec, uwsm app -- hyprlock
 bind = $mainMod, Return, exec, uwsm app -- alacritty
 bind = $mainMod, W, exec, uwsm app -- firefox
 bind = $mainMod, E, exec, uwsm app -- nautilus --new-window
-bind = $mainMod, Z, exec, uwsm app -- jolepods
+bind = $mainMod, Z, exec, uwsm app -- laurinpods
 bind = $mainMod, N, exec, uwsm app -- nightlight
 
 bind = , Print, exec, grim -o "$(hyprctl monitors -j | jq -r '.[] | select(.focused).name')" - | wl-copy
